--- a/main.css
+++ b/main.css
@@ -1,3 +1,21 @@
 body {
-    background-color: azure;
+    background-color:#DAAD86;
 }
+
+#bear-form {
+  background-color: #DAAD86;  
+}
+
+#bear-form-submit {
+    background-color: #8D8751;
+    border: solid 2px #FBEEC1;
+}
+
+/*
+COLOR SCHEMES
+#8D8751 olive green
+#659DBD blue
+#DAAD86 light tan
+#BC986A tan
+#FBEEC1 yellowish white
+*/
